# OhTe-harjoitustyo-2022

./: .coveragerc  .env  .env.test  README.md  pyproject.toml  tasks.py
data/: database.sqlite  sudokus.csv  test_database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.py.save
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli_luokkakaavio.md  sekvenssikaavio.md
src/: config.py  database_connection.py  index.py  initialize_database.py
src/data/: originals.csv
src/entities/: sudoku.py  user.py
src/repositories/: sudoku_repository.py  user_repository.py
src/services/: sudoku_service.py
src/tests/: conftest.py  sudoku_repository_test.py  sudoku_service_test.py  user_repository_test.py
src/ui/: gameloop.py  general_ui.py  login_view.py  mainpage_view.py  renderer.py  sprites.py  sudoku_view.py  ui.py  view_login.py  view_mainpage.py  view_sudoku.py
