[tool.poetry]
name = "ohte-harjoitustyö-2022"
version = "0.1.0"
description = ""
authors = ["Olivia Horjamo <olivia.horjamo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^4.0"
pygame = "^2.1.2"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
pylint = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
