[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = ["Olivia Horjamo <olivia.horjamo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
